# hamsterball-re

./: .gitignore  README.md
analysis/ghidra/: ExportFunctions.java  analyze_hamsterball.java  apply_renames.py  decomp_0x402650.c  decomp_ball_collision.c  decomp_ball_ctor.c  decomp_ball_vtable_0x402A70.c  decomp_ball_vtable_0x405100.c  decomp_graphics_init.c  decomp_level_vtbl_0x461370.c  decomp_level_vtbl_0x471830.c  decomp_load_texture.c  decomp_meshworld_load.c  r2_functions.txt  renames_backup.json  session38_progress.txt  session39_progress.txt
analysis/ghidra/HamsterballProject/Hamsterball.rep/: project.prp
analysis/ghidra/decompilations/app/: decomp_app_initialize.c  decomp_app_run.c
analysis/ghidra/decompilations/asset/: decomp_resource_manifest.c
analysis/ghidra/decompilations/audio/: decomp_audio_music_system.c  decomp_audio_play_music.c
analysis/ghidra/decompilations/ball/: decomp_0x405190.c  decomp_ball_applyforce_v2.c  decomp_ball_input_audio.c  decomp_ball_physics_core.c  decomp_ball_physics_update.c  decomp_ball_render.c  decomp_ball_vtable_0x401590.c  decomp_ball_vtable_0x4027F0.c  decomp_ball_vtable_0x402C10.c  decomp_ball_vtable_0x408390.c  decomp_ball_vtable_0x409480.c  decomp_ball_vtable_update_physics.c
analysis/ghidra/structs/: README.md  app_struct.h  ball_struct.h  ball_struct_draft.h  board_struct.h  gadget_struct.h  rumbleboard_struct.h  scene_struct.h  typedefs.h
analysis/screenshots/comparison/: README.md
analysis/screenshots/meshes/: index.md
audio-test/scripts/: render_songs.py  test_audio.sh
audio-test/songs/: README.md
docs/: API_STRATEGY.md  APP_INITIALIZE_DECOMP.md  ARENA_HAZARD_SYSTEM.md  ASSET_MANIFEST.md  AUDIO_SYSTEM.md  AUDIO_SYSTEM_SFX.md  BALL_PHYSICS_DECOMP.md  BALL_UPDATE_DECOMP.md  BINARY_MESHWORLD_FORMAT.md  BUILD_NOTES.md  CAMERA_SYSTEM.md  COLLISION_EVENT_SYSTEM.md  COLLISION_SYSTEM.md  COLLISION_SYSTEM_DEEP.md  CONTAINER_UTILITY_SYSTEMS.md  D3D8_RENDERING_PIPELINE.md  DIRECTINPUT_SYSTEM.md  FILE_FORMATS.md  FILE_HASHES.json  FONT_TEXT_SYSTEM.md  FUNCTION_MAP.md  GAME_LOOP_DECOMP.md  GAME_LOOP_WINDOW_MANAGEMENT.md  GAME_STATE_RACE_LIFECYCLE.md  GAME_STATE_TOURNAMENT.md  INPUT_SYSTEM.md  KEY_DECOMPILATIONS.md  KEY_FINDINGS.md  LEVEL_OBJECTS.md  LEVEL_OBJECT_FACTORY.md  LEVEL_RENDER_DECOMP.md  MESHWORLD_BINARY_FORMAT_OFFICIAL.md  MESHWORLD_FORMAT.md  MESHWORLD_OBJECT_TYPES.md  MESHWORLD_PARSE_DECOMP.md  MESH_BINARY_FORMAT.md  OBJECT_FACTORY_SYSTEM.md  PARTICLE_SYSTEM.md  RENDERING_ITERATION_LOG.md  RENDERING_PIPELINE.md  (+14 more)
docs/plans/: 2026-04-14-reimpl-working-game.md
originals/installed/extracted/: Jukebox.xml  RaceData.xml  readme.html
originals/installed/extracted/Data/: HS.CFG  (+1 more)
reimpl/: .gitignore  CMakeLists.txt  Makefile.mingw  Toolchain-mingw64.cmake  build_windows.sh  screenshot_level.sh  screenshot_original.sh  stitch_screenshots.py  test_audio.c  test_bg.c  test_level.sh  test_parse  test_parse.c  test_screenshot.sh  test_textures.c
reimpl/include/audio/: audio.h  jukebox.h  sfx_dsound.h
reimpl/include/core/: config.h  filesys.h  game.h
reimpl/include/game/: race_data.h
reimpl/include/graphics/: gl_loader.h  renderer.h  texture.h
reimpl/include/input/: input.h
reimpl/include/level/: level.h  mesh_parser.h  meshworld_parser.h  mw_parser_v4.h
reimpl/include/physics/: physics.h
reimpl/include/ui/: ui.h
reimpl/mingw-libs/: build_glew.sh
reimpl/reference-screenshots/: README.md  stitch_compare.py
reimpl/src/: test_parser.c
reimpl/src/audio/: audio.c  jukebox.c  sfx_dsound.c  stb_vorbis_impl.c
reimpl/src/core/: config.c  filesys.c  main.c  win32_main.c
reimpl/src/game/: race_data.c
reimpl/src/graphics/: gl_loader.c  renderer.c  texture.c
reimpl/src/input/: input.c
reimpl/src/level/: level.c  level_viewer.c  level_viewer_v2.c  mesh_parser.c  mesh_test.c  meshworld_parser.c
reimpl/src/physics/: physics.c
reimpl/src/ui/: ui.c
reimpl/tests/: test_assets.c  test_helpers.h  test_mesh.c  test_meshworld.c  test_quick.c  test_runner.sh  test_xml_parsers.c
screenshots/: README.md
scripts/: keepalive.py  test_api_compare.sh
skills/autonomous-ai-agents/hermes-agent/: SKILL.md
skills/devops/d3d8-cross-compile-wine/: SKILL.md
skills/gaming/hamsterball-re/: SKILL.md
skills/gaming/wine-api-comparison-test/: SKILL.md
skills/github/github-auth/: SKILL.md
skills/github/github-commits/: SKILL.md
skills/github/hamsterball-git-sync/: SKILL.md
skills/hamsterball-audio-reimplementation/: SKILL.md
skills/hamsterball-re-progress/: SKILL.md
skills/reimplementation/hamsterball-first-d3d8-build/: SKILL.md
skills/reimplementation/hamsterball-reimplementation-workflow/: SKILL.md
skills/reimplementation/hamsterball-rendering-status-report/: SKILL.md
skills/reverse-engineering-bootstrap/: SKILL.md
skills/reverse-engineering-bootstrap/binary-format-string-scan/: SKILL.md
skills/reverse-engineering/ghidra-mcp-headless/: SKILL.md
skills/reverse-engineering/ghidra-rename-backup/: SKILL.md
skills/reverse-engineering/ghidra-rename-export/: SKILL.md
skills/reverse-engineering/ghidra-restore-renames/: SKILL.md
tools/: render_meshes.py
(+197 files in other folders)
